--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,11 +1,11 @@
 ﻿{
 	"name": "Instant Currency Rates",
-	"version": "1.7",
+	"version": "2",
 	"manifest_version": 2,	
 	"description": "Get updates to the latest currency exchange rate in an Opera Speed Dial.",
 	"developer": {
 		"name": "M Shabeer Ali",
-		"url": ""
+		"url": "http://currencyrate.tumblr.com/submit"
 	},
 	"icons": {
 		"128": "pix/icon-128.png"
